--- a/expanding cards/index.html
+++ b/expanding cards/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expanding Cards</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -13,22 +14,22 @@
         </div>
     </div>
     <div class="container">
-        <div class="panel active" style="background-image: url('https://i.picsum.photos/id/1011/5472/3648.jpg?hmac=Koo9845x2akkVzVFX3xxAc9BCkeGYA9VRVfLE4f0Zzk');">
+        <div class="panel" style="background-image: url('https://i.picsum.photos/id/1012/3973/2639.jpg?hmac=s2eybz51lnKy2ZHkE2wsgc6S81fVD1W2NKYOSh8bzDc');">
             <h3>Explore The World</h3>
         </div>
     </div>
     <div class="container">
-        <div class="panel active" style="background-image: url('https://i.picsum.photos/id/1011/5472/3648.jpg?hmac=Koo9845x2akkVzVFX3xxAc9BCkeGYA9VRVfLE4f0Zzk');">
+        <div class="panel" style="background-image: url('https://i.picsum.photos/id/1013/4256/2832.jpg?hmac=UmYgZfqY_sNtHdug0Gd73bHFyf1VvzFWzPXSr5VTnDA');">
             <h3>Explore The World</h3>
         </div>
     </div>
     <div class="container">
-        <div class="panel active" style="background-image: url('https://i.picsum.photos/id/1011/5472/3648.jpg?hmac=Koo9845x2akkVzVFX3xxAc9BCkeGYA9VRVfLE4f0Zzk');">
+        <div class="panel" style="background-image: url('https://i.picsum.photos/id/102/4320/3240.jpg?hmac=ico2KysoswVG8E8r550V_afIWN963F6ygTVrqHeHeRc');">
             <h3>Explore The World</h3>
         </div>
     </div>
     <div class="container">
-        <div class="panel active" style="background-image: url('https://i.picsum.photos/id/1011/5472/3648.jpg?hmac=Koo9845x2akkVzVFX3xxAc9BCkeGYA9VRVfLE4f0Zzk');">
+        <div class="panel" style="background-image: url('https://i.picsum.photos/id/1022/6000/3376.jpg?hmac=FBA9Qbec8NfDlxj8xLhV9k3DQEKEc-3zxkQM-hmfcy0');">
             <h3>Explore The World</h3>
         </div>
     </div>
